--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,2 +1,33 @@
-<h1>Users#index</h1>
-<p>Find me in app/views/users/index.html.erb</p>
+<div class="container px-5 px-sm-0">
+  <div class="row">
+      
+    <%= render 'shared/userinfo',book:@book%>
+
+    <div class="col-md-8 offset-md-1">
+        <h2>Books</h2>
+        <table class="table table-hover.table-inverse">
+            <thead>
+                <tr>
+                    <th></th>
+                    <th>Title</th>
+                    <th>Opinion</th>
+                    <th clspan="3"></th>
+                </tr>
+            </thead>
+            <tbody>
+            <%=@books.each do |book|%>
+              <tr>
+                  <td></td>
+                  <td><%link_to </td>
+                  <td><%=book.body%></td>
+              </tr>
+            
+            <span><%=book.title%></span>
+            <span></span>  
+            <%end%>
+            </tbody>
+
+        </table>
+    </div>
+  </div>
+</div>
