--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,2 +1,31 @@
-<h1>Books#show</h1>
-<p>Find me in app/views/books/show.html.erb</p>
+<div class="container">
+    <div class="row">
+        
+        <%=render 'useinfo', book: @book%>
+        
+        <div class="col-md-8 offset-md-1">
+            <h2>Book detail</h2>
+            <table class="table">
+                <tbody>
+                    <tr>
+                        <td>
+                            <%=link_to user_path(:id)%>
+                        </td>
+                        <td>
+                            <%=link_to book.title,books_path(:id)%>
+                        </td>
+                        <td>
+                            <%=book.body%>
+                        </td>
+                        <td>
+                            <%link_to "Edit",edit_book_path(:id),class:"btn btn-sm btn-success"%>
+                        </td>
+                        <td>
+                            <%=link_to "Destroy",destroy_book_path(:id),method: :delete,"date-confirm"=>"本当に消しますか？"%>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
