--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,29 +1,28 @@
 <div class="container px-5 px-sm-0">
   <div class="row">
       
-    <%= render 'shared/userinfo',book:@book%>
+    <%= render 'useinfo',book: @book%>
 
     <div class="col-md-8 offset-md-1">
         <h2>Books</h2>
-        <table class="table table-hover.table-inverse">
+        <table class="table">
             <thead>
                 <tr>
                     <th></th>
-                    <th>Title</th>
-                    <th>Opinion</th>
+                    <th>image</th>
+                    <th>name</th>
                     <th clspan="3"></th>
                 </tr>
             </thead>
-            <tbody>
-            <%=@books.each do |book|%>
-              <tr>
-                  <td></td>
-                  <td><%link_to </td>
-                  <td><%=book.body%></td>
-              </tr>
             
-            <span><%=book.title%></span>
-            <span></span>  
+            <tbody>
+            <%@users.each do |user|%>
+              <tr>
+                  <td><%=image_tag @user.image%></td>
+                  
+                  <td><%current_user.name%></td>
+                  <td><%=link_to "Show",user_path(:users_id)%></td>
+              </tr>
             <%end%>
             </tbody>
 
