--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -2,23 +2,23 @@
     <div class="row">
         <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
             <h1>Editing Book</h1>
-            <%=form_with model: @book,url:update_book_path(@list.id),method: :patch do |f|%>
+            <%=form_with model: @book,url:edit_book_path(@book),method: :patch do |f|%>
             <div class="form-group">
                 <label for="book_title">Title</label>
-                <%=f.text_field:title%>
+                <%=f.text_field:title,autofocus:true,id:"book_title",class:"form-control book_title"%>
             </div>
             
             <div class="form-group">
             <label for="book_opinion">Opinion</label>
-                <%=f.text_area:body%>
+                <%=f.text_area:body,autofocus:true,id:"book_body",class:"form-control book_body"%>
             </div>
             
             <div class="form-group">
-                <%=f.submit "Update Book"%>
+                <%=f.submit "Update Book",class:"btn btn-success"%>
             </div>
             <%end%>
             
-            <%=link_to "Show",book_path(:id)%>
+            <%=link_to "Show",books_path(@book)%>
             |
             <%=link_to "Back",books_path%>
         </div>
