--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,2 +1,32 @@
-<h1>Books#index</h1>
-<p>Find me in app/views/books/index.html.erb</p>
+<div class="container px-5 px-sm-0">
+  <div class="row">
+      
+    <%=render 'users/useinfo',book: @book,user: @user%>
+
+    <div class="col-md-8 offset-md-1">
+        <h2>Books</h2>
+        <table class="table">
+            <thead>
+                <tr>
+                    <th></th>
+                    <th>Title</th>
+                    <th>Opinion</th>
+                    <th clspan="3"></th>
+                </tr>
+            </thead>
+            
+            <tbody>
+            <%@books.each do |book|%>
+              <tr>
+                  <td><%=image_tag book.user.get_profile_image(100,100)%></td>
+                  
+                  <td><%=link_to book.title,book_path(book.id)%></td>
+                  <td><%=book.body%></td>
+              </tr>
+            <%end%>
+            </tbody>
+
+        </table>
+    </div>
+  </div>
+</div>
