--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -6,8 +6,8 @@
   <%= render "devise/shared/error_messages", resource: resource %>
   
   <div class="field">
-    <%=f.label :name %><br>
-    <%=f.text_field :name,autofocus: true %>
+    <%=f.label :name %><br/>
+    <%=f.text_field :name,autofocus: true,autocomplete: "name" %>
   </div>
 
   <div class="field">
