--- a/app/views/users/_useinfo.html.erb
+++ b/app/views/users/_useinfo.html.erb
@@ -1,8 +1,8 @@
 
     <div class="col-md-3">
       <h1>User info</h1>
-         <% if @user.image.attached?%>
-            <%=image_tag @user.image,size:"100x100"%>
+         <% if user.image.attached?%>
+            <%=image_tag user.image,size:"100x100"%>
           <%else%>
             <%=image_tag 'no_image',size:"100x100"%>
           <%end%>
@@ -32,7 +32,7 @@
           </div>
          <div class="form-group">
          <h4>Opinion</h4>
-         <%=f.text_area :opinion%>
+         <%=f.text_area :body%>
          </div>
          <div class="form-group">
          <%=f.submit 'Create Book',class:"btn btn-success"%>
