--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,14 +1,14 @@
 <div class="container px-5 px-sm-0">
   <div class="row">
       
-    <%= render 'useinfo',book: @book%>
+    <%= render 'useinfo',book: @book,user: @user%>
 
     <div class="col-md-8 offset-md-1">
-        <h2>Books</h2>
+        <h2>Users</h2>
         <table class="table">
             <thead>
                 <tr>
-                    <th></th>
+                 
                     <th>image</th>
                     <th>name</th>
                     <th clspan="3"></th>
@@ -18,10 +18,10 @@
             <tbody>
             <%@users.each do |user|%>
               <tr>
-                  <td><%=image_tag @user.image%></td>
+                  <td><%=image_tag user.get_profile_image(100,100)%></td>
                   
-                  <td><%current_user.name%></td>
-                  <td><%=link_to "Show",user_path(:users_id)%></td>
+                  <td><%=user.name%></td>
+                  <td><%=link_to "Show",user_path(user.id)%></td>
               </tr>
             <%end%>
             </tbody>
