--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,12 +1,14 @@
+<p id="notice"></p>
+
 <div class="container px-5 px-sm-0">
     <div class="row">
         
-        <%=render 'useinfo',book: @book%>
+        <%=render 'useinfo',book: @book,user: @user%>
         
         <div class="col-md-8 offset-md-1">
             <h2>Books</h2>
             
-            <table class="table table-hover table-inverse">
+              <table class="table table-hover table-inverse">
                 <thead>
                     <tr>
                         <th></th>
@@ -18,18 +20,18 @@
                 
                 <tbody>
                     <%@books.each do |book|%>
-                    <tr>
-                        <td><%=image_tag book.get_image%></td>
-                    </tr>
-                    <tr>
-                        <%=link_to book.title,book_path(:id)%>
-                    </tr>
-                    <tr>
-                        <%=book.body%>
-                    </tr>
+                      <tr>
+                        <td><%=image_tag book.user.get_profile_image(100,100)%></td>
+                      
+                      
+                        <td><%=link_to book.title,book_path(book.id)%></td>
+                      
+                      
+                        <td><%=book.body%></td>
+                      </tr>
                     <%end%>
                 </tbody>
-            </table>
+              </table>
         </div>
         
     </div>
