--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -20,12 +20,15 @@
                         <td>
                             <%= @books.body%>
                         </td>
+                        
+                        <%if @books.user == current_user%>
                         <td>
                             <%=link_to "Edit",edit_book_path(@books),class:"btn btn-sm btn-success"%>
                         </td>
                         <td>
-                            <%=link_to "Destroy",book_path(@books.id),method: :delete,"date-confirm"=>"本当に消しますか？",class:"btn btn-sm btn-danger"%>
+                            <%=link_to "Destroy",book_path(@books.id),method: :delete,class:"btn btn-sm btn-danger","data-confirm"=>"本当に消しますか？"%>
                         </td>
+                        <%end%>
                     </tr>
                 </tbody>
             </table>
