--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -56,6 +56,11 @@
       </nav>
     </header>
     
+ 
+    <%flash.each do |key,value|%>
+      <%=content_tag(:div,value, class: "#{key}")%>
+    <%end%>
+    
     
     <%= yield %>
     
