--- a/app/views/users/_useinfo.html.erb
+++ b/app/views/users/_useinfo.html.erb
@@ -1,8 +1,8 @@
 
     <div class="col-md-3">
       <h1>User info</h1>
-         <% if user.image.attached?%>
-            <%=image_tag user.image,size:"100x100"%>
+         <% if user.profile_image.attached?%>
+            <%=image_tag user.profile_image,size:"100x100"%>
           <%else%>
             <%=image_tag 'no_image',size:"100x100"%>
           <%end%>
@@ -10,18 +10,20 @@
             <tbody>
               <tr>
                 <th>name</th>
-                <th><%=current_user.name%></th>
+                <th><%=user.name%></th>
               </tr>
               <tr>
                 <th>introduction</th>
-                <th><%=current_user.introduction%></th>
+                <th><%=user.introduction%></th>
               </tr>
             </tbody>
           </table>
           
           
           <div class="row">
-            <%=link_to edit_user_path(current_user),class:"btn btn-outline-secondary btn-block"%> 
+            <%if user.id ==current_user.id%>
+            <%=link_to "edit",edit_user_path(user),class:"btn btn-outline-secondary btn-block"%>
+            <%end%>
           </div>
           
         <h2 class="mt-3">New Book</h2>
