--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,19 +1,29 @@
+<% if @user.errors.any?%>
+  <%=@user.errors.count%>errors prohibited this obj from being saved:
+  <ul>
+    <%@user.errors.full_messages.each do |message|%>
+    <li><%=message%></li>
+    <%end%>
+  </ul>
+<%end%>
+
+
 <div class="container">
     <div class="row">
         <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
             <h2>User info</h2>
-            <%=form_with model: @user,url:update_user_path(@user.id),method: :patch do |f|%>
+            <%=form_with model: @user,url:update_user_path(@user),method: :patch do |f|%>
             <div class="form-group">
                 <label for="user_name">Name</label>
-                <%=f.text_field:name,autofocus:true,id:"user_name"%>
+                <%=f.text_field:name,autofocus:true,id:"user_name",class:"form-control name"%>
             </div>
             <div class="form-group">
                 <label for="user_image">Image</label>
-                <%=f.file_field:profile_image,placeholder:"ファイルを選択",accept:"image/*"%>
+                <%=f.file_field:profile_image,placeholder:"ファイルを選択",accept:"image/*",class:"form-control-file user_image"%>
             </div>
             <div class="form-group">
                 <label for="user_introduction">Introduction</label>
-                <%=f.text_area:introduction,id:"user_introduction"%>
+                <%=f.text_area:introduction,id:"user_introduction",class:"form-control introduction"%>
             </div>
             <div class="form-group">
                 <%=f.submit "Update User",class:"btn btn-secondary"%>
