--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,8 +1,17 @@
+<% if @book.errors.any?%>
+  <%=@book.errors.count%>errors prohibited this obj from being saved:
+  <ul>
+    <%@book.errors.full_messages.each do |message|%>
+    <li><%=message%></li>
+    <%end%>
+  </ul>
+<%end%>
+
 <div class="container">
     <div class="row">
         <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
             <h1>Editing Book</h1>
-            <%=form_with model: @book,url:update_book_path(@book),method: :patch do |f|%>
+            <%=form_with model: @book,local:true do |f|%>
             <div class="form-group">
                 <label for="book_title">Title</label>
                 <%=f.text_field:title,autofocus:true,id:"book_title",class:"form-control book_title"%>
