--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -2,9 +2,9 @@
     <div class="row">
         <div class="mx-auto col-11 col-sm-10 col-lg-8 col-xl-6">
 
-          <h1>welcome to <i class="fa-solid fa-book"></i><strong>Bookers</strong>!!</h1>
+          <h1>welcome to <i class="fas fa-book"></i><strong>Bookers</strong>!!</h1>
 
-<p>In Bookers,</p>
+<p>In <strong><i class="fas fa-book"></i>Bookers,</strong></p>
 <p>youcan share and exchange your opinions,inspressions,and emotions</p>
 <p>about various books!</p>
         <div class="btn-wrapper col-10 mx-auto">
