--- a/app/views/users/_useinfo.html.erb
+++ b/app/views/users/_useinfo.html.erb
@@ -21,12 +21,14 @@
           
           
           <div class="row">
-            <%if user.id ==current_user.id%>
-            <%=link_to "edit",edit_user_path(user),class:"btn btn-outline-secondary btn-block"%>
-            <%end%>
+ 
+            <%=link_to edit_user_path(user),class:"btn btn-outline-secondary btn-block" do %>
+              <i class="fas fa-user-cog"></i>
+             <%end%>
+
           </div>
           
-        <h2 class="mt-3">New Book</h2>
+        <h2 class="mt-3">New book</h2>
         <%= form_with(model: book, local: true) do |f| %>
           <div class="form-group">
           <h4>Title</h4>
