--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -12,7 +12,7 @@
     <div class="row">
         <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
             <h2>User info</h2>
-            <%=form_with model: @user,url:update_user_path(@user),method: :patch do |f|%>
+            <%=form_with model: @user,url:user_path(@user),method: :patch do |f|%>
             <div class="form-group">
                 <label for="user_name">Name</label>
                 <%=f.text_field:name,autofocus:true,id:"user_name",class:"form-control name"%>
