--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,14 +3,14 @@
 <div class="container px-5 px-sm-0">
     <div class="row">
         
-        <%=render 'useinfo',book: @book,user: @user%>
+        <%=render 'useinfo',book: @book,users: @user,user: @users%>
         
         <div class="col-md-8 offset-md-1">
             <h2>Books</h2>
             
               <table class="table table-hover table-inverse">
                 <thead>
-                    <tr>
+                    <tr> 
                         <th></th>
                         <th>Title</th>
                         <th>Opinion</th>
@@ -21,7 +21,10 @@
                 <tbody>
                     <%@books.each do |book|%>
                       <tr>
-                        <td><%=image_tag book.user.get_profile_image(100,100)%></td>
+                        <td><%=link_to user_path(book.user) do %>
+                              <%=image_tag book.user.get_profile_image(100,100)%>
+                            <%end%>
+                        </td>
                       
                       
                         <td><%=link_to book.title,book_path(book.id)%></td>
